Stop email address wrapping

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -257,3 +257,7 @@ details .arrow {
   outline: 2px solid $black;
   max-width: 100%;
 }
+
+.nowrap {
+  white-space: nowrap;
+}
